--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,12 @@
-.banner {
-    background: url(../assets/images/Hero.jpg) center center no-repeat;
-    background-size: cover;
-    height: 725px;
-    width: 100%;
-    display: flex;
-    align-items: center;
+.navbar-brand {
+    font-weight: bolder;
+    color:#2b7ab8;
+    font-size: 1.1em;
 }
 
-.banner-text {
-    position: absolute;
-    top: 150px;
-    left: 100px;
-    color:rgb(255, 255, 255);
-    width: 45%;
-    border: 10px solid black;
-    background-color: black;
-    opacity: 50%;
-    min-width: 260px;
-}
-
-.languages {
-    position: relative;
-    left: 10px;
-    top: 5px;
-}
-
-body {
-    background-color: rgb(211, 211, 211);
-}
-
-.contact {
-    background-color:black;
-    opacity: 80%;
-    color:rgb(221, 221, 221);
-    text-align: center;
-}
-
-.article {
-    max-width: 100%;
-    margin:40px;
-    border: 1px solid darkslategray;
-}
-
-.card-text {
-    font-size: larger;
-}
-
-.portfolio-card {
-    border: 4px solid rgb(0, 0, 73);
-    height: 100%;
+.nav-link {
+    color: rgb(109, 109, 109);
+    font-weight: 500;
+    font-size: 1.1em;
+    font-family:sans-serif;
 }
