--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,9 @@
     font-size: 1.1em;
     font-family:sans-serif;
 }
+
+.header {
+    font-weight: 700;
+    font-size: 4.5em;
+    color:rgb(63, 63, 63);
+}
