--- a/css/index.css
+++ b/css/index.css
@@ -21,3 +21,18 @@
     max-width: 600px;
     margin: auto;
 }
+
+.name {
+    color: #2b7ab8;
+}
+
+.button {
+    border: 2px solid #2b7ab8;
+    color: #2b7ab8;
+    font-weight: 500;
+}
+
+.button:hover {
+    background-color: #2b7ab8;
+    color: white;
+}
