--- a/css/index.css
+++ b/css/index.css
@@ -27,12 +27,32 @@
 }
 
 .button {
+    font-weight: bold;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    z-index: 0;
+    background: #fff;
+    overflow: hidden;
     border: 2px solid #2b7ab8;
     color: #2b7ab8;
-    font-weight: 500;
-}
-
-.button:hover {
-    background-color: #2b7ab8;
-    color: white;
-}
+  }
+  .button:hover {
+    color: #fff;
+  }
+  .button:hover:after {
+    width: 100%;
+  }
+  .button:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    transition: all 0.3s ease;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    background: #2b7ab8;
+  }
