Filled out project info in cards

--- a/css/index.css
+++ b/css/index.css
@@ -72,4 +72,10 @@ background: #2b7ab8;
 .card {
     box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
     border: 1px solid rgb(228, 228, 228);
+    height: 100%;
+}
+
+.card-title {
+    color:rgb(63, 63, 63);
+    font-weight: 700;
 }
