--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #fcfcfc;
+}
+
 .navbar-brand {
     font-weight: bolder;
     color:#2b7ab8;
@@ -84,13 +88,6 @@ background: #2b7ab8;
     font-size: 1.5rem;
 }
 
-.about {
-    color:rgb(63, 63, 63);
-    font-size: 1rem;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-}
-
 .card-img-top {
     height: 50%;
 }
@@ -103,4 +100,29 @@ background: #2b7ab8;
     max-width: 500px;
     margin: auto;
     display: flex;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.skill:hover {
+    transform: translateY(-3px);
+}
+
+.skill {
+    box-shadow: 0 3px 3px 0 rgb(0 0 0 / 15%);
+    padding: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    transition: transform 0.2s;
+}
+
+.text {
+    color:rgb(63, 63, 63);
+    font-size: 1rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
 }
