Made skills boxes more apparent, fixed margins/width for about content (accidentally removed a class tag on previous commit)

--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,7 @@ background: #2b7ab8;
     margin-right: 10px;
     margin-top: 10px;
     transition: transform 0.2s;
+    background-color: white;
 }
 
 .text {
