--- a/css/index.css
+++ b/css/index.css
@@ -127,3 +127,27 @@ background: #2b7ab8;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
 }
+
+.underline {
+    position: relative;
+    text-decoration: none;
+    transition: 0.5s;
+  }
+
+.underline::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 3px;
+    top: 90%;
+    left: 0%;
+    background: #2b7ab8;
+    transition: transform 0.3s;
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  
+.underline:hover::after {
+transform: scaleX(1);
+transform-origin: left;
+}
